Correcting z-index for the nav bar

--- a/assets/css/_basscss.scss
+++ b/assets/css/_basscss.scss
@@ -1236,7 +1236,7 @@ margin-bottom: 30px!important;
     background: #0064B1 url(../img/navbar_color.png) 0 0 repeat-x;
     background-size: cover;
     position: relative;
-    z-index: 999;
+    z-index: 99;
     height: auto;
     margin: 0 auto;
     -webkit-border-radius: 10px 10px 0 0;
